# trial.datagram

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  async_echo_client.cpp  async_echo_server.cpp  spawn_echo_client.cpp
include/trial/datagram/: acceptor.hpp  endpoint.hpp  socket.hpp
include/trial/datagram/detail/: acceptor.ipp  buffer.hpp  multiplexer.hpp  multiplexer.ipp  service.hpp  service.ipp  socket.ipp  socket_base.hpp
include/trial/net/: async_resolve.hpp  async_result.hpp  io_context.hpp
